--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
     <h2>Dependencies</h2>
 <p>yakala framework</p>
 <h2>Authors</h2>
-<p>Cem Eliguzel (cem@eliguzel.net)<br/><br/>      </p>
+<p>Cem Eliguzel  (cem@eliguzel.net)
+<p>Sinan Nalkaya (sardok@gmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>returneksibir (jobadcrawler-dev@googlegroups.com)<br/>      </p>
+<p>returneksibir (jobadcrawler-dev@googlegroups.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
